--- a/src/Colorful.Console/Colorful.Console.csproj
+++ b/src/Colorful.Console/Colorful.Console.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Colorful.Console</AssemblyName>
     <PackageId>GreemDev.Colorful.Console</PackageId>
     <PackageTags>Style;Styled;Output;Colourful;Colorful;Console;Command;Line;ASCII;Art;FIGlet</PackageTags>
-    <PackageReleaseNotes>Modern .NET version support</PackageReleaseNotes>
+    <PackageReleaseNotes>default isWindows to false in windows check</PackageReleaseNotes>
     <PackageIconUrl>https://github.com/tomakita/Colorful.Console/blob/master/static/colorful_icon_ngsize.png</PackageIconUrl>
     <PackageLicenseUrl>https://github.com/tomakita/Colorful.Console/blob/master/LICENSE.md</PackageLicenseUrl>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
@@ -19,7 +19,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <Version>1.3.0</Version>
+    <Version>1.3.1</Version>
     <AssemblyVersion>1.3.0.0</AssemblyVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
