--- a/src/Colorful.Console/Colorful.Console.csproj
+++ b/src/Colorful.Console/Colorful.Console.csproj
@@ -1,88 +1,92 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Description>Style your C# console output!</Description>
-    <Copyright>@ Tom Akita. All rights Reserved.</Copyright>
-    <AssemblyTitle>Colorful.Console</AssemblyTitle>
-    <VersionPrefix>1.3</VersionPrefix>
-    <Authors>Tom Akita;Muhammad Rehan Saeed;Matt Furden;Drew Noakes;Jamie Gould;Marcos Vinicius Maia;Sergey Korshunov;Adam Schiavone;IGusev;Shreyas Jejurkar;GreemDev</Authors>
-    <TargetFrameworks>netstandard2.0;net6.0;net8.0</TargetFrameworks>
-    <AssemblyName>Colorful.Console</AssemblyName>
-    <PackageId>GreemDev.Colorful.Console</PackageId>
-    <PackageTags>Style;Styled;Output;Colourful;Colorful;Console;Command;Line;ASCII;Art;FIGlet</PackageTags>
-    <PackageReleaseNotes>figlet helper</PackageReleaseNotes>
-    <PackageIconUrl>https://github.com/GreemDev/GreemDev.Colorful.Console/blob/master/static/colorful_icon_ngsize.png</PackageIconUrl>
-    <PackageLicenseUrl>https://github.com/GreemDev/GreemDev.Colorful.Console/blob/master/LICENSE.md</PackageLicenseUrl>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <Version>1.3.2</Version>
-    <AssemblyVersion>1.3.2.0</AssemblyVersion>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-  </PropertyGroup>
+    <PropertyGroup>
+        <Description>Style your C# console output!</Description>
+        <Copyright>@ Tom Akita. All rights Reserved.</Copyright>
+        <AssemblyTitle>Colorful.Console</AssemblyTitle>
+        <VersionPrefix>1.3</VersionPrefix>
+        <Authors>Tom Akita;Muhammad Rehan Saeed;Matt Furden;Drew Noakes;Jamie Gould;Marcos Vinicius Maia;Sergey Korshunov;Adam Schiavone;IGusev;Shreyas Jejurkar;GreemDev</Authors>
+        <TargetFrameworks>netstandard2.0;net6.0;net8.0;net9.0</TargetFrameworks>
+        <AssemblyName>Colorful.Console</AssemblyName>
+        <PackageId>GreemDev.Colorful.Console</PackageId>
+        <PackageTags>Style;Styled;Output;Colourful;Colorful;Console;Command;Line;ASCII;Art;FIGlet</PackageTags>
+        <PackageReleaseNotes>figlet helper</PackageReleaseNotes>
+        <PackageIconUrl>https://github.com/GreemDev/GreemDev.Colorful.Console/blob/master/static/colorful_icon_ngsize.png?raw=true</PackageIconUrl>
+        <PackageLicenseUrl>https://github.com/GreemDev/GreemDev.Colorful.Console/blob/master/LICENSE.md</PackageLicenseUrl>
+        <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+        <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
+        <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+        <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+        <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+        <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+        <Version>1.3.2</Version>
+        <AssemblyVersion>1.3.2.0</AssemblyVersion>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' != 'net40'">
-    <PackageReference Include="Microsoft.CSharp">
-      <Version>4.7.0</Version>
-    </PackageReference>
-  </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' != 'net40'">
+        <PackageReference Include="Microsoft.CSharp">
+            <Version>4.7.0</Version>
+        </PackageReference>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <Reference Include="System.Drawing" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-    
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+        <Reference Include="System.Drawing"/>
+        <Reference Include="System"/>
+        <Reference Include="Microsoft.CSharp"/>
+    </ItemGroup>
 </Project>
